<resources>
    <string name="app_name">Movies App</string>
    <string name="action_settings">Settings</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="pref_sort_by_label">Sort by</string>
    <string name="pref_sort_by_popularity_label">Popularity</string>
    <string name="pref_sort_by_rating_label">Rating</string>
    <string name="pref_sort_by_favorites_label">Favorites</string>
    <string name="pref_sort_by_key" translateble="false">sort_by</string>
    <string name="pref_sort_by_popularity" translateble="false">popularity</string>
    <string name="pref_sort_by_rating" translateble="false">top_rated</string>
    <string name="pref_sort_by_favorites" translatable="false">favorites</string>

    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_asc_label">Ascending</string>
    <string name="pref_sort_order_desc_label">Descending</string>
    <string name="pref_sort_order_key">sort_order</string>
    <string name="pref_sort_order_asc">asc</string>
    <string name="pref_sort_order_desc">desc</string>
    <string name="fragment_detail_movie_poster">Movie poster</string>

    <string name="content_authority">com.example.movieapp</string>

    <string name="detail_view_trailer">View trailer</string>
    <string name="detail_view_review">reviews</string>
    <string name="detail_no_review">No reviews</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
