<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_sort_by_label"
        android:key="@string/pref_sort_by_key"
        android:defaultValue="@string/pref_sort_by_popularity"
        android:entryValues="@array/pref_sort_by_values"
        android:entries="@array/pref_sort_by_options" />

    <ListPreference
        android:title="Sort order"
        android:key="@string/pref_sort_order_key"
        android:defaultValue="@string/pref_sort_order_desc"
        android:entryValues="@array/pref_sort_order_values"
        android:entries="@array/pref_sort_order_options" />


</PreferenceScreen>