<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_detail_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp"
            android:textColor="@color/colorTitleText"
            />


        <ImageView
            android:id="@+id/imageview_detail_fragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/fragment_detail_movie_poster"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating_detail_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:textColor="@color/colorRating"
                android:textSize="42sp"/>

            <ImageView
                android:id="@+id/imageview_favourites"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/trailer_detail_fragment"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/trailer"
                android:scaleType="centerInside"
                android:text="@string/detail_view_trailer"/>

        </LinearLayout>

            <TextView
                android:id="@+id/overview_detail_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/release_date_detail_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorTitleText"
                android:fontFamily="sans-serif-condensed"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:paddingBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/secondary_text_light"
                android:text="@string/detail_view_review"
                android:textAllCaps="true"/>

            <ListView
                android:id="@+id/review_adapter_listview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
    </LinearLayout>

</ScrollView>
